src/test/deca/syntax/invalid/created/bad_if2.deca
// Description :
//    if pas fermé
//
// Resultats :
//		Syntaxe error

{
if () {

}